# spirit-island-144p-map

./: .gitignore  Cargo.toml  LICENSE  build.rs  deploy.sh  islets.json5  testcache.py
assets/: main.cfg.json5
pkg/: package.json  spirit_island_144p_map.js
src/: asset_json5.rs  lib.rs
www/: bootstrap.js  index.html  index.js
