[package]
name = "spirit-island-144p-map"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.15", features = ["default_font", "wayland"] }
strum = { version = "0.27.1", features = ["derive"] }
wasm-bindgen = "0.2.100"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
